--- a/Sites/Dashboard_new/public/index.html
+++ b/Sites/Dashboard_new/public/index.html
@@ -14,24 +14,13 @@
 <body>
 
     <header class="menu" id="menuBar">
-        <a href="index.html"><img id="header__logo" src="img/Logo-DotControlTec.png" alt=""></a>
-        <ul>
-            <li><a href="">Monitoramento</a>
-                <ul>
-                    <li><a href="Monitoramento/visaoGlobal.html">Visão Global</a></li>
-                    <li><a href="Monitoramento/visaoMaquina.html">Visão Máquina</a></li>
-                </ul>
-            </li>
-            <li><a href="">Inventário</a>
-                <ul>
-                    <li><a href="Inventario/appInstalados.html">Apps Instalados</a></li>
-                    <li><a href="Inventario/infoMaquina.html">Especificação Máquina</a></li>
-                </ul>
-            </li>
-            <li><a href="https://painel.tomticket.com/login.html" target="_blank">HelpDesk</a></li>
-            <li><a href="">Relatórios</a></li>
-            <li><a href="./blacklist.html">Blacklist</a></li>
-            <li id="link_gestor"><a href="./administrador.html">Administrador</a></li>
+        <a href="../index.html"><img id="header__logo" src="../img/Logo-DotControlTec.png" alt=""></a>
+        <ul class="lista_links_menu">
+            <li><a href="../Monitoramento/visaoGlobal.html">Visão Global</a></li>
+            <li><a href="../Monitoramento/visaoMaquina.html">Visão Máquina</a></li>
+
+            <li><a href="../blacklist.html">Blacklist</a></li>
+            <li id="link_gestor"><a href="../administrador.html">Administrador</a></li>
         </ul>
         <a href="#"><i onclick="setModal()" id="header__profile" class="fas fa-user-circle"></i></a>
     </header>
