--- a/Sites/Dashboard_new/public/blacklist.html
+++ b/Sites/Dashboard_new/public/blacklist.html
@@ -17,7 +17,7 @@
         <div id='PopUpAlerta' class="pop_up_alerta">
             <div onclick="fecharPopUp()" class="fechar_pop_up">X</div>
             <div class="mensagem_pop_up">
-                Tem certeza que deseja excluir esse processo da sua Black List?
+                Atenção! Essa opção excluirá o processo de todas as máquinas da escola. Deseja continuar ?
             </div>
             <div class="div_box_btns">
                 <button onclick="removerProcessoEscola()" class="btn_pop_up btn_pop_up_confirmar">Confirmar</button>
