--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -158,6 +158,19 @@
 
 
                 </div>
+                <div class="container-configuracao_maquina">
+                    <div class="container-configuracao_maquina__box">
+                        <h2>Informações da Máquina</h2>
+                        <div class="div_lista_infomacoes_maquina">
+                            <img id="loadingInfoMaquina" src="../img/gifLoading.gif" class="loading_info_maquina">
+                            <ul id="lista_informacoes_maquina" class="lista_infomacoes_maquina">
+
+                            </ul>
+                        </div>
+                    </div>
+
+
+                </div>
                 <div class="container-blacklist_computador">
                     <div class="container-blacklist_computador__box">
                         <iframe style="display:none;" name="blacklist" src="visaoMaquina.html"></iframe>
@@ -175,9 +188,10 @@
                         </form>
                         <hr class="container_black_list__divisoria">
                         <div class="div_tabela_blacklist">
+                            <h3>BlackList Máquina</h3>
                             <table class="tabela_blacklist">
                                 <thead>
-                                    <th>Nome Processo(s)</th>
+                                    <th>Processo(s) Bloqueado(s)</th>
                                 </thead>
                                 <tbody id="tabela_processos_blacklist">
 
@@ -264,7 +278,7 @@
                         } else {
                             disponibilidade = '<td style="color: red; font-weight: bold;">Off</td>'
                         }
-                        listaMaquinas.innerHTML += `<tr class="tr-maquina" onclick="selectMachine(${"machine" + i}, ${json.length})" id="machine${i}" data-idComputer="${json[i].idComputador}" data-disponibilidade="${json[i].disponibilidade}">
+                        listaMaquinas.innerHTML += `<tr class="tr-maquina" onclick="selectMachine(${"machine" + i}, ${json.length})" id="machine${i}" data-idComputer="${json[i].idComputador}" data-numeroserial="${json[i].serialNum}" data-ipv4="${json[i].ipv4}" data-so="${json[i].sistemaOperacional}" data-nomecomputador="${json[i].nomeComputador}" data-disponibilidade="${json[i].disponibilidade}">
                             <td>${json[i].nomeComputador}</td>
                             <td>${json[i].sistemaOperacional}</td>
                             <td>${json[i].ipv4}</td>
@@ -292,6 +306,10 @@
     function selectMachine(n, max) {
         n.backgroundColor = "#0156ff"
         let disponibilidadeComp = n.dataset.disponibilidade;
+        nomeMaquina = n.dataset.nomecomputador;
+        sistemaOperacionalMaquina = n.dataset.so;
+        ipv4Maquina = n.dataset.ipv4;
+        serialNumMaquina = n.dataset.numeroserial;
         if (disponibilidadeComp == "true") {
             setLigado();
             disponivel.innerHTML = `<span>DISPONIBILIDADE: <span style="color: green;justify-content:center; display:flex; font-size: 50px; text-transform: uppercase">
@@ -313,6 +331,11 @@
             [0.50, "#f9c802"],
             [1.0, "#ff0000"]
         ];
+        loadingInfoMaquina.style.display = 'block';
+        let intervaloParaInformacoesMaquina = setInterval(() => {
+            atualizaInformacoesMaquina();
+            clearInterval(intervaloParaInformacoesMaquina);
+        }, 2000);
         atualizaGraficos()
         recuperaProcessosComputador();
         let intervaloRercuperacaoProcessoEscola = setInterval(() => {
