Adicionando favicon em telas dash e arrumando problema na tela profile

--- a/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
+++ b/Sites/Dashboard_new/public/Monitoramento/visaoMaquina.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/visaoMaquina.css">
     <link rel="stylesheet" href="../css/header.css">
+    <link rel="shortcut icon" href="../img/logofavicon.png" type="image/x-icon">
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
     <script src="https://www.chartjs.org/dist/2.9.3/Chart.min.js"></script>
