--- a/Sites/Dashboard_new/public/profile.html
+++ b/Sites/Dashboard_new/public/profile.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="./img/logofavicon.png" type="image/x-icon">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/profile.css">
-    <script src="js/function.js"></script>
     <title>Perfil</title>
 </head>
 
@@ -75,3 +75,4 @@
 <script>
     document.getElementById('container__spn-nome').innerHTML = sessionStorage.nome_usuario_meuapp
 </script>
+<script src="js/function.js"></script>
