--- a/Sites/Dashboard_new/public/administrador.html
+++ b/Sites/Dashboard_new/public/administrador.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/header.css">
     <script src="https://kit.fontawesome.com/f87ccf6615.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/administrador.css">
-
+    <link rel="shortcut icon" href="./img/logofavicon.png" type="image/x-icon">
 </head>
 
 <body>
