--- a/Sites/Dashboard_new/public/login.html
+++ b/Sites/Dashboard_new/public/login.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/login.css">
+    <link rel="shortcut icon" href="./img/logofavicon.png" type="image/x-icon">
     <title>Entrar</title>
 </head>
 
